@@ -1,6 +1,12 @@
 2007-03-14  Eitan Isaacson  <eitan@ascender.com>
 
-	* plugins/api_view.py: 
+	* plugins/event_monitor.glade:
+	* plugins/event_monitor.py: Added mousover feedback and keyboard
+	control to hyperlinks in the event monitor (bug 417526).
+
+2007-03-14  Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/api_view.py:
 	* plugins/event_monitor.py:
 	* src/lib/accerciser/accessible_treeview.py:
 	* src/lib/accerciser/tools.py: Made more resilient to dead 
